@@ -1,11 +1,11 @@
 README:  Tcl
-    This is the Tcl 8.5.3 source distribution.
+    This is the Tcl 8.5.4 source distribution.
     Tcl/Tk is also available through NetCVS:
 	http://tcl.sourceforge.net/
     You can get any source release of Tcl from the file distributions
     link at the above URL.
 
-RCS: @(#) $Id: README,v 1.67.2.1 2008/04/11 18:12:29 dgp Exp $
+RCS: @(#) $Id: README,v 1.67.2.2 2008/08/08 15:22:27 dgp Exp $
 
 Contents
 --------
